feat: search suggestion